--- a/CLAM/plugins/testing/ThresholdTrigger/SConstruct
+++ b/CLAM/plugins/testing/ThresholdTrigger/SConstruct
@@ -16,6 +16,7 @@ otherDependencies = [
 options = Variables('options.cache', ARGUMENTS)
 options.Add(PathVariable('clam_prefix', 'The prefix where CLAM was installed', '/usr/local'))
 options.Add(PathVariable('prefix', 'Installation prefix (normally /usr, by default this is clam_prefix)', "", validator=PathVariable.PathAccept))
+options.Add(PathVariable('prefix_for_packaging', 'Install location when packaging. Use "." for same as prefix.', '.'))
 options.Add(BoolVariable('verbose', 'Display the full command line', 'no') )
 options.Add(BoolVariable('crossmingw', 'Using MinGW crosscompiler mode', 'no') )
 toolChain = 'mingw' if sys.platform == "win32" else 'default'
@@ -26,6 +27,8 @@ env.SConsignFile() # Single signature file
 
 CLAMInstallDir = env['clam_prefix']
 if not env['prefix'] : env['prefix'] = env['clam_prefix']
+#TODO: CHECK THIS
+if env['prefix_for_packaging'] == '.' : env['prefix_for_packaging'] = env['prefix']
 
 clam_sconstoolspath = os.path.join(CLAMInstallDir,'share','clam','sconstools')
 if env['crossmingw'] :
