--- a/CLAM/debian/rules
+++ b/CLAM/debian/rules
@@ -67,7 +67,7 @@ install: build
 	dh_installdirs
 	mkdir -p $(CURDIR)/debian/tmp/usr
 	cd $(CURDIR) && $(SCONS) install
-	dh_install --sourcedir=debian/tmp
+	dh_install --sourcedir=debian/tmp --fail-missing
 
 # Build architecture-independent files here.
 binary-indep: build install
