--- a/trunk/CLAM/plugins/debian/rules
+++ b/trunk/CLAM/plugins/debian/rules
@@ -89,7 +89,7 @@ binary-arch: build install
 	dh_installexamples
 	dh_installman
 	dh_link
-	dh_strip
+	dh_strip --dbg-package=libclam-plugin1.4-dbg
 	dh_compress
 	dh_fixperms
 	dh_makeshlibs
